--- a/configure_system/roles/vim/tasks/main.yml
+++ b/configure_system/roles/vim/tasks/main.yml
@@ -14,3 +14,18 @@
 - name: Installing vim plugins
   command: vi -c 'PlugInstall | qa'
   # TODO: figure out how to not mark this changed
+# Installation
+- name: Install vim gentoo
+  portage:
+    package:
+      - app-editors/vim
+    state: present
+  when: ansible_os_family == "Gentoo"
+  become: yes
+- name: Install vim debian
+  apt:
+    name:
+      - vim-gtk
+    state: present
+  when: ansible_os_family == "Debian"
+  become: yes
