Adds tag to skip installs

--- a/configure_system/roles/awesome/tasks/main.yml
+++ b/configure_system/roles/awesome/tasks/main.yml
@@ -42,6 +42,8 @@
     state: present
   when: ansible_os_family == "Gentoo"
   become: yes
+  tags:
+    - install
 - name: Install terminal dependencies debian
   apt:
     name:
@@ -50,3 +52,5 @@
     state: present
   when: ansible_os_family == "Debian"
   become: yes
+  tags:
+    - install
