--- a/configure_system/roles/tmux/tasks/main.yml
+++ b/configure_system/roles/tmux/tasks/main.yml
@@ -33,6 +33,8 @@
     state: present
   when: ansible_os_family == "Gentoo"
   become: yes
+  tags:
+    - install
 - name: Install tmux debian
   apt:
     name:
@@ -40,3 +42,5 @@
     state: present
   when: ansible_os_family == "Debian"
   become: yes
+  tags:
+    - install
