--- a/configure_system/roles/vim/tasks/main.yml
+++ b/configure_system/roles/vim/tasks/main.yml
@@ -7,6 +7,8 @@
     state: present
   when: ansible_os_family == "Gentoo"
   become: yes
+  tags:
+    - install
 - name: Install vim debian
   apt:
     name:
@@ -14,6 +16,8 @@
     state: present
   when: ansible_os_family == "Debian"
   become: yes
+  tags:
+    - install
 # Configuration
 - name: Linking vim folder
   file:
