--- a/configure_system/roles/zsh/tasks/main.yml
+++ b/configure_system/roles/zsh/tasks/main.yml
@@ -21,6 +21,8 @@
     state: present
   when: ansible_os_family == "Gentoo"
   become: yes
+  tags:
+    - install
 - name: Install zsh debian
   apt:
     name:
@@ -30,3 +32,5 @@
     state: present
   when: ansible_os_family == "Debian"
   become: yes
+  tags:
+    - install
