Specialize font size selection

--- a/configure_system/roles/terminal_common/tasks/main.yml
+++ b/configure_system/roles/terminal_common/tasks/main.yml
@@ -5,12 +5,10 @@
     dest: ~/scripts
     owner: "{{ user }}"
     state: link
-- name: Linking alacritty config
-  file:
+- name: Deploying alacritty config
+  template:
     src: "{{ repo }}/alacritty/alacritty.yml"
     dest: ~/.alacritty.yml
-    owner: "{{ user }}"
-    state: link
 - name: Linking fonts
   file:
     src: "{{ repo }}/fonts"
