Adds alacrity to installed programs

--- a/configure_system/roles/terminal_common/tasks/main.yml
+++ b/configure_system/roles/terminal_common/tasks/main.yml
@@ -44,6 +44,7 @@
       - sys-apps/bat
       - sys-apps/exa
       - dev-python/pip
+      - x11-terms/alacritty
     state: present
   when: ansible_os_family == "Gentoo"
   become: yes
