--- a/configure_system/roles/tmux/tasks/main.yml
+++ b/configure_system/roles/tmux/tasks/main.yml
@@ -23,7 +23,7 @@
     accept_hostkey: yes
 - name: Installing powerline
   pip:
-    name: git+git://github.com/powerline/powerline
+    name: git+https://github.com/powerline/powerline
     extra_args: --user
 # Installation
 - name: Install tmux gentoo
