--- a/vim/vim_dir/coc-settings.json
+++ b/vim/vim_dir/coc-settings.json
@@ -1,4 +1,5 @@
 {
+    "suggest.noselect": true,
     "rust-client.rlsPath": "/usr/lib/rust/1.60.0/bin/rls",
     "rust-analyzer.rustfmt.rangeFormatting.enable": true,
     "rust-analyzer.rustfmt.extraArgs": ["--edition", "2021"],
