Adds flags tmux flags to enable focus-events and term color detection

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -159,3 +159,6 @@ set -sg escape-time 0
 # set -g aggressive-resize on
 set-window-option -g aggressive-resize
 setw -g xterm-keys on
+# NVIM support
+set -g focus-events on
+set-option -sa terminal-overrides ',xterm-256color:RGB'
