Adapts alacritty binding to paste selection

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -22,6 +22,9 @@ window:
 shell:
   program: /bin/zsh
 
+key_bindings:
+  - {key: P, mods: Control|Shift, action: PasteSelection}
+
 # XTerm's default colors
 colors:
   # Default colors
