--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -6,8 +6,8 @@ unbind C-a
 unbind C-b
 set -g prefix C-a
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 bind-key C-a last-window
 bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
 bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
