Adds new tmux/vim combi plugin

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -119,6 +119,8 @@ set -g @tpm_plugins '				\
   tmux-plugins/tmux-sensible		\
   tmux-plugins/tmux-yank			\
 '
+set -g @plugin 'christoomey/vim-tmux-navigator'
+bind C-l send-keys 'C-l'
 run-shell '/home/{{ user }}/.tmux/plugins/tpm/tpm'
 
 # bind b split-window "tmux lsw | percol --initial-index $(tmux lsw | awk '/active.$/ {print NR-1}') | cut -d':' -f 1 | tr -d '\n' | xargs -0 tmux select-window -t"
