Fixes clear screen binding (clear now requires prefix c-l)

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -120,8 +120,9 @@ set -g @tpm_plugins '				\
   tmux-plugins/tmux-yank			\
 '
 set -g @plugin 'christoomey/vim-tmux-navigator'
-bind C-l send-keys 'C-l'
 run-shell '/home/{{ user }}/.tmux/plugins/tpm/tpm'
+
+bind -r C-l send-keys 'C-l'
 
 # bind b split-window "tmux lsw | percol --initial-index $(tmux lsw | awk '/active.$/ {print NR-1}') | cut -d':' -f 1 | tr -d '\n' | xargs -0 tmux select-window -t"
 # bind B split-window "tmux ls | percol --initial-index $(tmux ls | awk \"/^$(tmux display-message -p '#{session_name}'):/ {print NR-1}\") | cut -d':' -f 1 | tr -d '\n' | xargs -0 tmux switch-client -t"
