--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -119,10 +119,7 @@ set -g @tpm_plugins '				\
   tmux-plugins/tmux-sensible		\
   tmux-plugins/tmux-yank			\
 '
-set -g @plugin 'christoomey/vim-tmux-navigator'
 run-shell '/home/{{ user }}/.tmux/plugins/tpm/tpm'
-
-bind -r C-l send-keys 'C-l'
 
 # bind b split-window "tmux lsw | percol --initial-index $(tmux lsw | awk '/active.$/ {print NR-1}') | cut -d':' -f 1 | tr -d '\n' | xargs -0 tmux select-window -t"
 # bind B split-window "tmux ls | percol --initial-index $(tmux ls | awk \"/^$(tmux display-message -p '#{session_name}'):/ {print NR-1}\") | cut -d':' -f 1 | tr -d '\n' | xargs -0 tmux switch-client -t"
@@ -165,3 +162,18 @@ setw -g xterm-keys on
 # NVIM support
 set -g focus-events on
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+
+# vim-tmux navigator bindings
+# Smart pane switching with awareness of vim and fzf
+forward_programs="view|n?vim?|fzf"
+
+should_forward="ps -o state= -o comm= -t '#{pane_tty}' \
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?($forward_programs)(diff)?$'"
+
+bind -n C-h if-shell "$should_forward" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$should_forward" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$should_forward" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$should_forward" "send-keys C-l" "select-pane -R"
+bind -n C-\\ if-shell "$should_forward" "send-keys C-\\" "select-pane -l"
+
+bind -r C-l send-keys 'C-l'
