Fixes vim-airline and renames exa to eza

--- a/configure_system/roles/terminal_common/tasks/main.yml
+++ b/configure_system/roles/terminal_common/tasks/main.yml
@@ -45,7 +45,7 @@
   portage:
     package:
       - sys-apps/bat
-      - sys-apps/exa
+      - sys-apps/eza
       - dev-python/pip
       - x11-terms/alacritty
       - sys-process/htop
