[tmux] Introduces extrakto tmux plugin

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -113,11 +113,12 @@ set -g @sidebar-tree-command 'tree -C'
 set -g @sidebar-tree-position 'left'
 # set -g @resurrect-processes 'ssh psql mysql sqlite3'
 
-set -g @tpm_plugins '				\
-  tmux-plugins/tpm					\
-  tmux-plugins/tmux-copycat			\
-  tmux-plugins/tmux-sensible		\
-  tmux-plugins/tmux-yank			\
+set -g @tpm_plugins '\
+  tmux-plugins/tpm\
+  tmux-plugins/tmux-copycat\
+  tmux-plugins/tmux-sensible\
+  tmux-plugins/tmux-yank\
+  laktak/extrakto\
 '
 run-shell '/home/{{ user }}/.tmux/plugins/tpm/tpm'
 
